# PawkerGymBot

./: .env.example  .gitignore  Dockerfile  match_challenge_spec.md  pyproject.toml  schema.sql
.claude/: settings.local.json
bot/: code_generator.py  cog.py  config.py  database.py  embeds.py  main.py  models.py  repository.py  service.py  tasks.py  views.py
data/: bot.db  bot.db-shm  bot.db-wal
match_challenge_bot.egg-info/: PKG-INFO  SOURCES.txt
